# trading

./: .env.example  .gitignore  .graduation_notified  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  PLAN.md  PROGRESS.md  README.md  all_strategies.pid  docker-compose.yml  pyproject.toml  requirements.txt  skills-lock.json  trading_backup.sql
backtest/: benchmark.py  benchmark_summary.py  compare.py  engine.py  enhanced_engine.py  run.py  screener_backtest.py  screener_metrics.py  screener_portfolio.py  tune_wiki.py  walkforward.py
config/: backtest.yaml  local.yaml  screener-technical.yaml  screener.yaml  system.yaml  valuation.yaml
crawl-wiki/: README.md  graph.json  index.md  manifest.json
data/: external_apis.py  feed.py  free_apis.py  journal.db  orders.jsonl  test_journal.db  walkforward_buyhold_BTC_USDT_1d.json  walkforward_buyhold_BTC_USDT_4h.json  walkforward_ml_BTC_USDT_1d.json  walkforward_ml_BTC_USDT_4h.json  walkforward_ml_p1_BTC_USDT_4h.json  walkforward_ml_p2_BTC_USDT_4h.json  walkforward_ml_p3_BTC_USDT_4h.json  walkforward_ml_v2_BTC_USDT_4h.json  walkforward_regime_BTC_USDT_1d.json  walkforward_regime_BTC_USDT_4h.json  wiki_threshold_results.json
docs/: architecture.md  code-standards.md  codebase-summary.md  deployment-guide.md  ml_xgboost_modification_plan.md  production-readiness-audit.md  project-changelog.md  project-overview-pdr.md  quickstart.md  roadmap.md  system-architecture.md  vn-stock-advisory-design.md  walkforward_report_BTC_USDT_1d.md  walkforward_report_BTC_USDT_4h.md
execution/: __init__.py  live_trading.py  order_manager.py  order_retry.py  paper_trading.py  partial_exit.py  slippage_tracker.py  trailing_stop.py
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  nginx.conf  package-lock.json  package.json  (+3 more)
(+875 files in other folders)
